# ChangeLog for sci-chemistry/pointless
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/pointless/ChangeLog,v 1.35 2013/06/19 04:16:10 bicatali Exp $

  19 Jun 2013; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml:
  Changed herd to sci-chemistry

  19 Oct 2012; Justin Lecher <jlec@gentoo.org> +pointless-1.6.14.ebuild,
  -pointless-1.6.15.ebuild:
  Drop broken version

*pointless-1.6.15 (19 Oct 2012)

  19 Oct 2012; Justin Lecher <jlec@gentoo.org> pointless-1.6.2.ebuild,
  -pointless-1.6.4.ebuild, -pointless-1.6.5.ebuild, -pointless-1.6.11.ebuild,
  -pointless-1.6.14.ebuild, +pointless-1.6.15.ebuild:
  Remove virtual/fortran and always call fortran-2_pkg_setup as intend by the
  updated fortran-2.eclass

  14 Apr 2012; Andreas Schuerch <nativemad@gentoo.org> pointless-1.6.2.ebuild:
  x86 stable, see bug 375917, thanks all.

*pointless-1.6.14 (28 Feb 2012)

  28 Feb 2012; Justin Lecher <jlec@gentoo.org> +pointless-1.6.14.ebuild:
  Version Bump

*pointless-1.6.11 (27 Dec 2011)

  27 Dec 2011; Justin Lecher <jlec@gentoo.org> +pointless-1.6.11.ebuild:
  Version Bump

  16 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> pointless-1.6.2.ebuild:
  amd64 restable

  08 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> pointless-1.6.2.ebuild:
  Revert back to ~arch for security and libpng porting.

  06 Oct 2011; Tony Vroon <chainsaw@gentoo.org> pointless-1.6.2.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo in bug
  #351753.

*pointless-1.6.5 (04 Oct 2011)

  04 Oct 2011; Justin Lecher <jlec@gentoo.org> +pointless-1.6.5.ebuild:
  Version Bump

*pointless-1.6.4 (31 Aug 2011)

  31 Aug 2011; Justin Lecher <jlec@gentoo.org> +pointless-1.6.4.ebuild:
  Version Bump

  28 Aug 2011; Justin Lecher <jlec@gentoo.org> pointless-1.6.2.ebuild:
  Narrowed dep on ccp4-libs to 6.1.3-r10, #376251

  15 Aug 2011; Justin Lecher <jlec@gentoo.org> pointless-1.6.2.ebuild: