@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile install prepare setup
+DEPEND=sci-chemistry/ccp4-apps >=sci-libs/ccp4-libs-6.1.3-r10 sci-libs/clipper sci-libs/fftw:2.1 sci-libs/mmdb >=sci-libs/cctbx-2010.03.29.2334-r3 virtual/fortran
+DESCRIPTION=Scores crystallographic Laue and space groups
+EAPI=5
+HOMEPAGE=ftp://ftp.mrc-lmb.cam.ac.uk/pub/pre/pointless.html
+KEYWORDS=~amd64 ~ppc ~x86 ~amd64-linux ~x86-linux
+LICENSE=ccp4
+RDEPEND=sci-chemistry/ccp4-apps >=sci-libs/ccp4-libs-6.1.3-r10 sci-libs/clipper sci-libs/fftw:2.1 sci-libs/mmdb >=sci-libs/cctbx-2010.03.29.2334-r3 virtual/fortran
+SLOT=0
+SRC_URI=ftp://ftp.mrc-lmb.cam.ac.uk/pub/pre/pointless-1.6.14.tar.gz
+_eclasses_=eutils	63afaaed8aa819fdcb814c7cd39495a2	fortran-2	db8710b355fc5598015c4bc3aad3bdb0	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=b97510e5d705df0f3fdd810e222ed42a
