@@ -1,17 +1,28 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX 1.5.1-gcc4.4.patch 290 SHA256 6f6f4435d4ec3248b06adfa16bf2ee635a993f9d4670667d80505dea5f0b7a95 SHA512 b8933598afe2497979856cdf03ed5bd9b34d7ef30821cd0ef2be7b42898193259da2162edd3fac57c29ce45569b6e4c1578cd3d8c2f9afaab06d3606bd202c43 WHIRLPOOL 740c004dbcc423e50cb4873b3b8f9c052c3ec93ea0c2dcb54ce467721007e417200724fbc4a9fcdd821c8e6b32a745178fbdacff1c89a9c24a92d886fc74a10e
 DIST pointless-1.6.14.tar.gz 423657 SHA256 68f0c1f65239b1451310fe885c2b9d51fc558de7b43af1e584750e05dc5635d8 SHA512 9dd524a7c842edc01206450c52ca1a01e8e3ee6f9ff71742789943ee10e006b5452b0be3aa509dd16bb85f1b9c3d7954616a78ec2fef2daea7c0ab42cdaa42b9 WHIRLPOOL 5085afbd88713384039ef2c2b4b2f7fddd8f078dca9df54062b0415e970791868c61df98f4044b4e061077a73b4e129b6e5db34852d64cace48108db9c6ae50f
 DIST pointless-1.6.2.tar.gz 412244 SHA256 5e09ca592ea565e8ace142fc0edff39d0ab723f4ac6e2cadd6ba571d667c80f6
+EBUILD pointless-1.6.14-r1.ebuild 1330 SHA256 be1e8297c8e5c4c02036f6f1a879a526ba10e1844c07736cd609f20173caa30c SHA512 e81a604caedf6cf517116a7eaf55518074002c77e876de1b830756c7a07df503d9ae3ae7e7c7ee39f7610b5b574f3be064c3b437ec3a6538f0b198ac8f22bc2c WHIRLPOOL 9ef63ffb67e245a7498d3da838972f0dfa4ddf180583c8565f7cbc1faac5486e65f330919cc3c2a1d355e7ffc491e5bdf58f6d1d9b3b9539bf7db4b1c66d9c9c
 EBUILD pointless-1.6.14.ebuild 1440 SHA256 3b9a0289054a7a86eadda4dbcc958398f1edd6151e0736f6e074d43c69ff561d SHA512 b7f785418036eb6f334dd9a3236387d198d50892315d469f1cf111608b26ba5d0b4e93bf786a47978aaac2f31cdb0f9c87e3d3f5d4d85f94d392e2e9c25262e5 WHIRLPOOL 7144d9a18513ac387dd7bcd069ad61c1a0be7f331843d2f697b3ac8bb25214cc2f2bf0b6193067fad688c909f293c5c9562bec378c2982833aa75c89f2c1f1e5
 EBUILD pointless-1.6.2.ebuild 1435 SHA256 6d6f5a144308f8a6c85df3dd451f598560f7c4f97266e45ac1143a9658fb727f SHA512 b0e8080742932c75985b4565bf1222436c90d5067108a9bb00fb12d37617e4fe0d89d0ad2244b92c82b95ab63d0949ec31998d03c788b47ee75c35529c39e29a WHIRLPOOL 66ab004c6f416e259b3e045d8f7baa40a75ae3e66cc96cf29ee91cf9dbb66f2f4c27f51ff8b5a5f86facf978931ee595d9ad59ca456e5f9f31471606db2cc3d5
-MISC ChangeLog 5493 SHA256 24036d24bdbcde680800ca6d2f2a150e6ca80745baecfc8a980f27923ac49449 SHA512 89895b6f2372f358a0f4412eb8adc2db5d89bcb484b6a6bb5492490e1fd646f823902238fb9e5f6f6d14fe11286503cfe03c4d75e0c44ac7e5800e23dcc8708f WHIRLPOOL 4ae81138670a6f8e0979ce11637dfe5418aee3fba3e703e2822785253bb4e58a280d08319c61de549ee9e206a85611fb287223b963388ceec263ed6541257b89
-MISC metadata.xml 229 SHA256 0f110645272f37341c3729c03cf88dbb871ed82db98c8b0dbda8734343b88567 SHA512 2e7cece2f0eb384df9ecb83d07ff9082abefd8f1e797006cbda98a018aeab49a48253ae8094cd0298c2ee8279274d707f0c0b2c0665e6273d9bbb432d6b579c9 WHIRLPOOL 44140ec3764af0d7a442dcaaf0b2904dbd279197bfbe014d5388cf8fe5016156237840985b0f3f7603cac3a0cfda3cf83291976e15bfbc8cb82dbfa13d5c451b
+MISC ChangeLog 5666 SHA256 14587dcd7a3d5473352fdaa8fbbf2dbaba67e650c6a082146b68d4ef0fd871ef SHA512 69b2de47325f75ffa2d5fd6e45a2de58c325c7dea13e88a3b91fa0f895bd3ddd73dcf6c280fde592bb17e0d3313079bffa6433241a41239ca2b709218b39062a WHIRLPOOL a3a894952bff0eb7f34dd65164d2c901c158a8df9f4dcdf47e0d713509a19d204cd8f4808d40fe682003d427c9b4111b36757b06d3d17a3ec7bc198ffae48a84
+MISC metadata.xml 234 SHA256 8297e76ecd2cb828f604e9f138b263179eb84beb640215a0f60d7613eb46bb7f SHA512 0e94c0e6570a9267a39968d81c3b80680ccbc6eebb62199e4830b021a114c94a0de17ef2103cef62b7e27da1f51f225a30abb802aff82140ae6dc43366113d31 WHIRLPOOL fa6d4d90b092953b88ed3ad03e1e8c189296d268b39d13a4b4dcb78f0c4456341e3f1b44eea0860054fee43079179cb7cf7a912acf1fbe693ecdca6d9a65f081
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlHBMIsACgkQ1ycZbhPLE2CvngCfbmCsGr4lRVNV3gB6xxh9cBc1
-MGkAoLE9WlUbNGvUaLuX2vofdVbDsXUt
-=rMb8
+iQIcBAEBCgAGBQJSDLX8AAoJELnU8jG9FVirbaUQAJyNTMRawZqtlhYjz60tGFlz
+ftWW2hYG5c0PLShJkUJtN4oJXHVllL1soUrQkSRyY74bjOtF5T5D0b8GhfaMoXkn
+hAIuj1XqzU+0Fu/d43f0LkfA+MLUbBcFZt88Eq8jC5kFhiF4+s1EgryMv58POu7q
+NlVAfJ6puBcSCJC27lMH+LbK6Oum0uhIn2r8KagpvOI20kSDAaFqd+M7WnGVIb1p
+1LtBVaYkk+wGL+kDl8KAhUt6huI1FFxYn4PFt3GaSNfiTQbP63fcz09qYsKe0THA
+usQWkNaUXC+hNMc3fnevLSZ/T9AWkRE5j6pSevs3FgEWm33o7XzKJSOvnAif+Tg8
+EoCP3vWpVt7ptZpC5wfTZUkiETE+Uo5jljIvUBq9pNCm1kT48Wyi/om6fsewkHbd
+UNHzo/VC+kYH77kt0sqozWmoyYuafIHaJI0/h3Ql6WFaBMlhTOk16I18S1m2Ffdr
+4EBsMQpUXPeNgq4I7TeK6zTHRf13J6lQEj0RiQONOgaVbyIAhyXan2zzkVz+0wsV
+cepfm0OGkM2tgY08WxZ75cOlpXZA7oA9tv/DQ9Vu60xUGIe7kZvd1Dvd9ctDyPQb
+BR/8flj5n7UPGbRM+dyWIXdsYAX8zWTLKAUBgmgTkPznZVJNPqDLA/PM9EFQz4Mq
++TkWfVgAlUwD/H64UyvH
+=fYKI
 -----END PGP SIGNATURE-----
