@@ -1,6 +1,12 @@
 # ChangeLog for sci-chemistry/pointless
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/pointless/ChangeLog,v 1.35 2013/06/19 04:16:10 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/pointless/ChangeLog,v 1.36 2013/08/15 11:05:31 jlec Exp $
+
+*pointless-1.6.14-r1 (15 Aug 2013)
+
+  15 Aug 2013; Justin Lecher <jlec@gentoo.org> +pointless-1.6.14-r1.ebuild,
+  metadata.xml:
+  Bump EAPI, drop pointless python.eclass usage
 
   19 Jun 2013; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml:
   Changed herd to sci-chemistry
